fixed horizontal scroll issue

--- a/client/src/pages/tasks/board/board.css
+++ b/client/src/pages/tasks/board/board.css
@@ -57,7 +57,6 @@
 /** Kaban Board Styling ************************************************************************************/
 .board-columns {
     /* width: 500px; */
-
     /* min-height: calc(100% - 56px); */
     /* height: 100%; */
 
@@ -68,18 +67,22 @@
 
     white-space: nowrap;
     position: relative;
-    /* overflow-x: scroll; */
-    overflow-x: hidden;
-    overflow-y: scroll; /*!!!!!!!!!*/
+
+    /* ORIGINAL */
+    overflow-x: scroll; 
+    overflow-y: hidden; 
+    /* ORIGINAL */
+
+    /* overflow-x: hidden; */
+    /* overflow-y: scroll; */
     -webkit-overflow-scrolling: touch;
 
     padding-left: 45px;
     display: flex;
 
     /* background-color: antiquewhite; */
-
 }
-  
+
 .board-column {
     box-sizing: border-box;
     min-width: 250px;
@@ -98,11 +101,32 @@
 
     /* min-height: fit-content; */
     /* height: calc(100% - 41px); */
+    /* min-height: 100%;  */
 
     /* ***** */
-    min-height: 100%; 
+    /* no height setting */
     /* ***** */
+
+    margin: 0 8px;
+    display: inline-block;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .kaban-board-heading {
     margin-bottom: 20px;
@@ -110,10 +134,7 @@
 }
 
 .board-droppable-area {
-    /* ***** */
-    height: 100%;
-    /* ***** */
-
+    
     /* min-height: 100%; */
     /* min-height: fit-content; */
     /* min-height: max(100%, fit-content); */
@@ -122,13 +143,16 @@
     /* height: calc(100% - 41px); */
     /* min-height: 200px; */
     /* height: fit-content; */
-    
-    width: 100%;
 
     /* overflow-y: scroll;  */
     /*! This method of allowing users to verically scroll is not supported by react-beautiful-dnd. Fix issue in future. */
-    
     /* overflow-x: initial; */
+
+    /* ***** */
+    height: 100%;
+    /* ***** */
+    width: 100%;
+    
     background-color: antiquewhite;
 }
 
